# docs/swagger.yaml
@@ -523,6 +523,35 @@ paths:
       - ApiKeyAuth: []
       tags:
       - Quiz
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: quizId
+        in: path
+        name: quizId
+        required: true
+        type: integer
+      - description: studentId
+        in: path
+        name: studentId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SuccessResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - Quiz
   /students/quiz/{quizId}/delete/{studentId}:
     delete:
       consumes:
